# local-sd-generator

./: .gitignore  .sdgen_config.json  CLAUDE.md  CONTINUATION_PROMPT.md  LICENSE  PHASE3_IMPLEMENTATION.md  README.md  build-report.json  convert_json_configs.py  convert_legacy_to_phase2.py  product_idea.md  pyproject.toml  pytest.ini  test_phase3.sh  validate_conversion.py
.claude/: 20251015_172451-commands.md  20251016_110448-cli-issues.md  20251024_113830-CONTINUATION-roadmap-migration.md  20251024_160119-PO_AGENT_SETUP.md  20251029_173510-idées_theme.md  20251030_202636-syntax-reference.md  20251031_020024-refactoring_opportunities.md  20251031_025323-machine_specs.md  20251110_213000-session-status-fsm.md  20251111_005500-cli-generate-refactoring-analysis.md  20251117_104225-gallery-filtering-feature.md  20251117_134250-sessions-module-refactoring-plan.md  20251117_172000-webui-bugs-and-tasks.md  AGENT_ARCHITECTURE.md  CURRENT_STATUS.md  NEW_SESSION_PROMPT.md  agents-setup.md  braindump.md  doc-cleanup-audit.md  doc-restructure-plan.md  localhost.har  next-session-notes.md  pending_commits.md  rename_files.py  settings.local.json  syntax-reference.md  webui-routing-fix-notes.md
CLI/: .gitignore  .sdgen_config.json  CONVERSION_PROMPT.md  README.md  V1_MIGRATION_INVENTORY.md  V1_TO_V2_EDIT_PLAN.md  conftest.py  demo_generators.py  example_new_features_sf4_sf5.py  example_phase1_demo.py  example_phase2_demo.py  example_simple_generator.py  example_templating.py  generate_from_template.py  generator_cli.py  image_variation_generator.py  legacy_compat_report.json  legacy_main_output.json  pyproject.toml  pytest.ini  run_tests.sh  sdapi_client.py  sdapi_client_legacy.py  template_cli.py  template_cli_typer.py  test_integration_phase2.py  test_multiple_files.py  test_nested_variations.py  test_new_features.py  test_placeholder_options.py  test_placeholder_priority.py  test_prompt_replacement.py  test_standalone_params.py  variation_loader.py
CLI/api/: __init__.py  batch_generator.py  image_writer.py  sdapi_client.py
CLI/config/: config_loader.py  config_schema.py  config_selector.py  global_config.py
CLI/configs/: test_dry_run.json
CLI/examples/: README.md
CLI/examples/base/: portrait_woman.char.template.yaml
CLI/examples/characters/: portrait_base.char.yaml  yuki.char.yaml
CLI/examples/prompts/: hires_example.prompt.yaml  portrait_selected.prompt.yaml  portrait_variations_full.prompt.yaml  quick_test.prompt.yaml  scheduler_example.prompt.yaml
CLI/execution/: json_generator.py
CLI/output/: metadata_generator.py  output_namer.py
CLI/private_generators/: emma-batch-generator.py  facial-expression-generator.py.bak  facial_expression_generator.py
CLI/scripts/: diagnose_parse_variations.py  test_legacy_compatibility.py
CLI/src/: cli.py
CLI/src/api/: batch_generator.py  progress_reporter.py  sdapi_client.py  session_manager.py
CLI/src/examples/characters/: sophia.char.yaml
CLI/src/examples/prompts/: sophia_expressions.prompt.yaml
CLI/src/examples/variations/: body_types.yaml  ethnicities.yaml  expressions.yaml  framing.yaml  hair_styles.yaml  lighting.yaml
CLI/src/output/: metadata_generator.py
CLI/src/templating/: executor.py  orchestrator.py  resolver.py
CLI/src/templating/generators/: generator.py
CLI/src/templating/legacy_v1/: README.md  multi_field.py
CLI/src/templating/loaders/: parser.py
CLI/src/templating/models/: config_models.py
CLI/src/templating/resolvers/: import_resolver.py  inheritance_resolver.py  template_resolver.py
CLI/src/templating/v2/: README.md  executor.py  orchestrator.py
CLI/src/templating/v2/generators/: __init__.py  generator.py
CLI/src/templating/v2/loaders/: parser.py  yaml_loader.py
CLI/src/templating/v2/models/: config_models.py
CLI/src/templating/v2/normalizers/: normalizer.py
CLI/src/templating/v2/resolvers/: import_resolver.py  inheritance_resolver.py
CLI/src/templating/v2/utils/: hash_utils.py
CLI/src/templating/v2/validators/: validator.py
CLI/src/templating/validators/: __init__.py  validation_error.py  validator.py
CLI/templating/: __init__.py  chunk.py  loaders.py  multi_field.py  prompt_config.py  resolver.py  selectors.py  types.py
CLI/tests/: test_config_loader.py  test_config_schema.py  test_config_selector.py  test_global_config.py  test_integration_phase3.py  test_json_generator.py  test_metadata_generator.py  test_negative_prompt_placeholders.py  test_output_namer.py  test_placeholder_options.py  test_reverse_config.py
CLI/tests/api/: test_batch_generator.py  test_image_writer.py  test_progress_reporter.py  test_sdapi_client.py  test_session_manager.py
CLI/tests/execution/: test_manifest.py
CLI/tests/integration/: test_integration_phase2.py  test_new_features.py
CLI/tests/legacy/: test_module.py  test_nested_variations.py
CLI/tests/templating/: __init__.py  test_chunk.py  test_loaders.py  test_multi_field.py  test_parse_variations_structured.py  test_phase2_integration.py  test_prompt_config.py  test_resolver_imports.py  test_selectors_chunk.py
CLI/tests/templating/fixtures/: expressions.yaml  simple_test.prompt.yaml
CLI/tests/templating/fixtures/characters/: emma.char.yaml
CLI/tests/templating/fixtures/prompts/: emma_variations.prompt.yaml
CLI/tests/templating/fixtures/variations/: ethnic_features.yaml  expressions.yaml  hairstyles.yaml  outfits_casual.yaml  poses.yaml
CLI/tests/templating/legacy_v1/: test_chunk.py  test_resolver.py  test_selectors.py  test_selectors_chunk.py
CLI/tests/v2/integration/: test_api_integration.py
CLI/tests/v2/unit/: test_adetailer_models.py  test_adetailer_parser.py  test_generator.py  test_import_resolver.py  test_inheritance_resolver.py  test_models.py  test_normalizer.py  test_orchestrator.py  test_parser.py  test_template_resolver.py  test_validation_errors.py  test_validator.py  test_yaml_loader.py
api/: .env.example  main.py
apioutput/: README.md
backend/: .env.example  pyproject.toml  test_paths.py
configs/: example_interactive.json  example_minimal.json  (+2 more)
sd-image-generator/: pyproject.toml
(+232 files in other folders)
